Archive2/67/f0e1be5ea7c136/output
main.cpp: In instantiation of 'struct Convert<int, double>':
main.cpp:55:28:   required from here
main.cpp:27:9: error: static assertion failed: type not allowed
         static_assert(is_allowed<T>::value && is_allowed<U>::value,"type not allowed");
         ^
main.cpp: In instantiation of 'struct Convert<double, int>':
main.cpp:28:58:   required from 'static int Convert<T, U>::param() [with T = int; U = double]'
main.cpp:55:30:   required from here
main.cpp:27:9: error: static assertion failed: type not allowed
